// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keywords AnyKeyword 1`] = `
"\\"use strict\\";
exports.__esModule = true;
var runtime_1 = require(\\"@manta-style/runtime\\");
var Test = runtime_1[\\"default\\"].TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
    var type = runtime_1[\\"default\\"].AnyKeyword;
    return type;
}, []);
"
`;

exports[`Keywords BooleanKeyword 1`] = `
"\\"use strict\\";
exports.__esModule = true;
var runtime_1 = require(\\"@manta-style/runtime\\");
var Test = runtime_1[\\"default\\"].TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
    var type = runtime_1[\\"default\\"].BooleanKeyword;
    return type;
}, []);
"
`;

exports[`Keywords NeverKeyword 1`] = `
"\\"use strict\\";
exports.__esModule = true;
var runtime_1 = require(\\"@manta-style/runtime\\");
var Test = runtime_1[\\"default\\"].TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
    var type = runtime_1[\\"default\\"].NeverKeyword;
    return type;
}, []);
"
`;

exports[`Keywords NullKeyword 1`] = `
"\\"use strict\\";
exports.__esModule = true;
var runtime_1 = require(\\"@manta-style/runtime\\");
var Test = runtime_1[\\"default\\"].TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
    var type = runtime_1[\\"default\\"].NullKeyword;
    return type;
}, []);
"
`;

exports[`Keywords NumberKeyword 1`] = `
"\\"use strict\\";
exports.__esModule = true;
var runtime_1 = require(\\"@manta-style/runtime\\");
var Test = runtime_1[\\"default\\"].TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
    var type = runtime_1[\\"default\\"].NumberKeyword;
    return type;
}, []);
"
`;

exports[`Keywords ObjectKeyword 1`] = `
"\\"use strict\\";
exports.__esModule = true;
var runtime_1 = require(\\"@manta-style/runtime\\");
var Test = runtime_1[\\"default\\"].TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
    var type = runtime_1[\\"default\\"].ObjectKeyword;
    return type;
}, []);
"
`;

exports[`Keywords StringKeyword 1`] = `
"\\"use strict\\";
exports.__esModule = true;
var runtime_1 = require(\\"@manta-style/runtime\\");
var Test = runtime_1[\\"default\\"].TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
    var type = runtime_1[\\"default\\"].StringKeyword;
    return type;
}, []);
"
`;

exports[`Keywords UndefinedKeyword 1`] = `
"\\"use strict\\";
exports.__esModule = true;
var runtime_1 = require(\\"@manta-style/runtime\\");
var Test = runtime_1[\\"default\\"].TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
    var type = runtime_1[\\"default\\"].UndefinedKeyword;
    return type;
}, []);
"
`;
